# SZE-MOSZE-2020-Random

./: .gitignore  Dockerfile  Game_8h_source.html  HeroSVGRenderer_8h_source.html  HeroTextRenderer_8h_source.html  Hero_8h_source.html  JSON_8h_source.html  Makefile  Map_8h_source.html  MarkedMap_8h_source.html  Monster_8h_source.html  ObserverSVGRenderer_8h_source.html  ObserverTextRenderer_8h_source.html  PreparedGame_8h_source.html  README.md  README_dox.md  Renderer_8h_source.html  Report.md  SVGRenderer_8h_source.html  TextRenderer_8h_source.html  annotated.html  attack_test.sh  attack_test_target.txt  autotoc_md0.html  classGame-members.html  classGame.html  classGame_1_1AlreadyHasHeroException-members.html  classGame_1_1AlreadyHasHeroException.html  classGame_1_1AlreadyHasUnitsException-members.html  classGame_1_1AlreadyHasUnitsException.html  classGame_1_1GameAlreadyStartedException-members.html  classGame_1_1GameAlreadyStartedException.html  classGame_1_1NotInitializedException-members.html  classGame_1_1NotInitializedException.html  classGame_1_1OccupiedException-members.html  classGame_1_1OccupiedException.html  classGame_1_1PuttingOnWallException-members.html  classGame_1_1PuttingOnWallException.html  classGame_1_1PuttingOnWallException__inherit__graph.map  classGame_1_1PuttingOnWallException__inherit__graph.md5  (+179 more)
maps/: map1  (+1 more)
unit_test/: CMakeLists.txt  jsontest.cpp  parse_test.json  parse_test2.json  test_bad_gameconfig.json  test_gameconfig.json  test_hero1.json  test_hero2.json  test_map  test_map2  test_monster1.json  test_monster2.json  test_monster3.json  (+1 more)
(+123 files in other folders)
